--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,9 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-upload_port = /dev/ttyUSB0
-upload_speed = 115200
+#upload_port = /dev/ttyUSB0
+#upload_speed = 115200
+upload_protocol = espota
+upload_port = 192.168.1.105
+upload_flags =
+    --port=3232
