--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,18 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+#lib_ldf_mode = deep+
 monitor_speed = 115200
 #upload_port = /dev/ttyUSB0
 #upload_speed = 115200
 upload_protocol = espota
-upload_port = 192.168.1.105
-upload_flags =
-    --port=3232
+upload_port = 192.168.1.107
+#upload_port = 192.168.4.1
+#upload_flags =
+#    --port=3232
+
+lib_deps =
+  frankjoshua/Rosserial Arduino Library @ ^0.9.1
+  br3ttb/PID @ ^1.2.1
+  #https://github.com/tzapu/WiFiManager
+  thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.1
