--- a/platformio.ini
+++ b/platformio.ini
@@ -27,3 +27,4 @@ lib_deps =
   br3ttb/PID @ ^1.2.1
   #https://github.com/tzapu/WiFiManager
   thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.1
+  madhephaestus/ESP32Servo @ ^0.9.0
