simple_buttons & pub_vel , pub_dir

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ monitor_speed = 115200
 #upload_port = /dev/ttyUSB0
 #upload_speed = 115200
 upload_protocol = espota
-upload_port = 192.168.1.107
+upload_port = 192.168.1.110
 #upload_port = 192.168.4.1
 #upload_flags =
 #    --port=3232
@@ -28,3 +28,4 @@ lib_deps =
   #https://github.com/tzapu/WiFiManager
   thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.1
   madhephaestus/ESP32Servo @ ^0.9.0
+  mikalhart/TinyGPSPlus @ ^1.0.2
