--- a/platformio.ini
+++ b/platformio.ini
@@ -16,8 +16,8 @@ framework = arduino
 monitor_speed = 115200
 #upload_port = /dev/ttyUSB0
 #upload_speed = 115200
-upload_protocol = espota
-upload_port = 192.168.1.110
+#upload_protocol = espota
+#upload_port = 192.168.1.110
 #upload_port = 192.168.4.1
 #upload_flags =
 #    --port=3232
@@ -29,3 +29,4 @@ lib_deps =
   thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.2.1
   madhephaestus/ESP32Servo @ ^0.9.0
   mikalhart/TinyGPSPlus @ ^1.0.2
+  jrowberg/I2Cdevlib-MPU6050 @ 0.0.0-alpha+sha.fbde122cc5
