--- a/platformio.ini
+++ b/platformio.ini
@@ -16,8 +16,8 @@ framework = arduino
 monitor_speed = 115200
 #upload_port = /dev/ttyUSB0
 #upload_speed = 115200
-#upload_protocol = espota
-#upload_port = 192.168.1.110
+upload_protocol = espota
+upload_port = 192.168.1.109
 #upload_port = 192.168.4.1
 #upload_flags =
 #    --port=3232
